--- a/src/index.html
+++ b/src/index.html
@@ -90,12 +90,12 @@ License: You must have a valid license purchased only from themeforest(the above
 									<ul class="header-tabs nav align-self-end font-size-lg" role="tablist">
 										<!--begin::Item-->
 										<li class="nav-item">
-											<a href="#" class="nav-link py-4 px-6 active" data-toggle="tab" data-target="#kt_header_tab_1">User List</a>
+											<a href="" class="nav-link py-4 px-6" >User List</a>
 										</li>
 										<!--end::Item-->
 										<!--begin::Item-->
 										<li class="nav-item mr-3">
-											<a href="#" class="nav-link py-4 px-6" data-toggle="tab" data-target="#kt_header_tab_2" role="tab">Post</a>
+											<a href="/post"  class="nav-link py-4 px-6">Post</a>
 										</li>
 										<!--end::Item-->
 									</ul>
