--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,9 @@ License: You must have a valid license purchased only from themeforest(the above
 										<li class="nav-item mr-3">
 											<a href="/post"  class="nav-link py-4 px-6">Post</a>
 										</li>
+										<li class="nav-item mr-3">
+											<a href="/trending"  class="nav-link py-4 px-6">Trending</a>
+										</li>
 										<!--end::Item-->
 									</ul>
 									<!--begin::Tab Navs-->
