--- a/src/index.html
+++ b/src/index.html
@@ -134,27 +134,10 @@ License: You must have a valid license purchased only from themeforest(the above
 								<div class="header-navs header-navs-left" id="kt_header_navs">
 									<!--begin::Tab Navs(for tablet and mobile modes)-->
 									<ul class="header-tabs p-5 p-lg-0 d-flex d-lg-none nav nav-bold nav-tabs" role="tablist">
-										<!--begin::Item-->
-										<li class="nav-item mr-2">
-											<a href="#" class="nav-link btn btn-clean active" data-toggle="tab" data-target="#kt_header_tab_1" role="tab">Home</a>
-										</li>
-										<!--end::Item-->
-										<!--begin::Item-->
-										<li class="nav-item mr-2">
-											<a href="#" class="nav-link btn btn-clean" data-toggle="tab" data-target="#kt_header_tab_2" role="tab">Reports</a>
-										</li>
-										<!--end::Item-->
-										<!--begin::Item-->
-										<li class="nav-item mr-2">
-											<a href="#" class="nav-link btn btn-clean" data-toggle="tab" data-target="#kt_header_tab_2" role="tab">Orders</a>
-										</li>
-										<!--end::Item-->
-										<!--begin::Item-->
-										<li class="nav-item mr-2">
-											<a href="#" class="nav-link btn btn-clean" data-toggle="tab" data-target="#kt_header_tab_2" role="tab">Help Ceter</a>
-										</li>
-										<!--end::Item-->
-									</ul>
+										<li class="list-group-item"><a href="">User</a></li>
+										<li class="list-group-item"><a href="/post">Post</a></li>
+										<li class="list-group-item"><a href="/trending">Trending</a></li>
+									  </ul>
 									<!--begin::Tab Navs-->
 									<!--begin::Tab Content-->
 									<div class="tab-content">
